<resources>
    <string name="app_name">ECommerceApp</string>
    <string name="users_login">Users Login</string>
    <string name="user_login">User Login</string>
    <string name="admin_login">Admin Login</string>
    <string name="staff_login">Staff Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="users_register">Users Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="click_this_to_login_screen">Click This To Login Screen</string>
    <string name="click_this_to_register_screen">Click This To Register Screen</string>
    <string name="title_activity_user_main">UserMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="admin_login_text">Admin Login</string>
    <string name="tambah_staff">Tambah Staff</string>
    <string name="tambah_stok">Tambah Stok</string>
    <string name="add_ecommerce_staff">Add ECommerce Staff</string>
    <string name="staff_login_text">Staff Login</string>
    <string name="logout">Logout</string>
    <string name="current_user">Current User</string>
</resources>